# cargo-bay

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  docker-compose.advanced.yml  docker-compose.example.yml
.github/workflows/: ci.yml  docker.yml
examples/: generate_jwt.rs
src/: auth.rs  cache.rs  config.rs  error.rs  main.rs  registry.rs  upstream.rs
tests/: integration_test.rs
