[package]
name = "docker-registry-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sled = "0.34"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
base64 = "0.21"
hex = "0.4"
bytes = "1.5"
futures = "0.3"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
